# rules_swift

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  Package.resolved  Package.swift  README.md  SNAPCI.star  WINDOWS.md  WORKSPACE  WORKSPACE.bzlmod  bazel.rc  bazel_features.patch  ci.yaml  extensions.bzl  platform_mappings_bzlmod  rules_cc.patch
.bazelci/: presubmit.yml  update_workspace_to_deps_heads.sh
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: generate-notes.sh  pull_request_template.md  update-module-version.sh  update-swift-release-files.sh
.github/workflows/: create-release.yml  macos-latest-xcode.yml  (+1 more)
.travis/: bazelrc.linux  bazelrc.osx  build.sh  install.sh
doc/: BUILD  BUILD.bazel  README.md  api.bzl  api.md  aspects.md  debuggable_remote_swift.md  doc.bzl  explicit_modules.md  faq.md  index.md  proto_migration.md  providers.md  rules.bzl  rules.md  setup.md  standalone_toolchain.md  stardoc.pr103.patch
examples/: BUILD
examples/cross_compilation/: BUILD.bazel  README.md
examples/cross_compilation/Sources/Binary/: main.swift
examples/cross_compilation/Sources/Greeter/: Greeter.swift
examples/cross_compilation/Sources/Reactor/: Reactor.swift
examples/cross_compilation/Sources/SwiftJNI/: SwiftJNI.swift
examples/cross_compilation/android_app/: AndroidManifest.xml  BUILD.bazel  README.md  android.MODULE.bazel  emulator.bzl  rules_android_maven_install.json  run.sh  validation.bzl
examples/cross_compilation/android_app/Sources/Greeter/: Greeter.swift
examples/cross_compilation/android_app/Sources/SwiftJNI/: SwiftJNI.swift
examples/cross_compilation/android_app/java/com/example/swiftjni/: MainActivity.kt  NativeBridge.kt
examples/cross_compilation/static_linux/: BUILD.bazel  README.md  static_linux.MODULE.bazel
examples/cross_compilation/static_linux/Sources/Greeter/: Greeter.swift
examples/cross_compilation/static_linux/Sources/HelloStaticLinux/: main.swift
examples/cross_compilation/wasm/: BUILD.bazel  reactor_test.sh  wasm.MODULE.bazel
examples/cross_compilation/wasm/web/: README.md  verify.mjs
examples/cross_compilation/web/: README.md  index.html  verify.mjs
examples/embedded/: BUILD.bazel  transition.bzl
examples/embedded/Sources/Application/: Application.swift
examples/embedded/Sources/Support/include/: Support.h
examples/toolchain/embedded/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
examples/toolchain/embedded/rpi-4b-blink/: BUILD.bazel
examples/xplatform/custom_swift_library/: BUILD.bazel  Regular.swift  custom_swift_library.bzl  main.swift
examples/xplatform/custom_swift_proto_compiler/rules/: BUILD  BUILD.bazel  custom_proto_compiler.sh  custom_proto_compiler_plugin.sh  custom_swift_proto_compiler.bzl  custom_swift_proto_compiler.sh
examples/xplatform/custom_swift_proto_compiler/swift/: BUILD.bazel
examples/xplatform/new_grpc/service/: BUILD  BUILD.bazel  service.proto
examples/xplatform/new_grpc/service/messages/: BUILD.bazel  messages.proto
examples/xplatform/new_grpc/service/service_messages/: BUILD.bazel  service_messages.proto
mixed_language/: BUILD  mixed_language_library.bzl
proto/: BUILD  BUILD.bazel  compiler.bzl  compiler_util.bzl  def.bzl  proto.bzl  swift_proto_common.bzl  swift_proto_compiler.bzl  swift_proto_library.bzl  swift_proto_library_group.bzl  swift_proto_utils.bzl  util.bzl
proto/compilers/: BUILD  swift_proto_compiler_macros.bzl
snapci/: cool.sh  deploy.sh  utils.sh
swift/: BUILD  extensions.bzl  extras.bzl  module_name.bzl  package.bzl  providers.bzl  repositories.bzl  stats.bzl  swift.bzl  swift_binary.bzl  swift_clang_module_aspect.bzl  swift_common.bzl  swift_compiler_plugin.bzl  swift_compiler_plugin_import.bzl  swift_cross_import_overlay.bzl  swift_cross_import_overlays_group.bzl  swift_extract_symbol_graph.bzl  swift_feature_allowlist.bzl  swift_grpc_library.bzl  swift_import.bzl  swift_interop_hint.bzl  swift_interop_info.bzl  swift_library.bzl  swift_library_group.bzl  swift_module_alias.bzl  swift_module_mapping.bzl  swift_module_mapping_test.bzl  swift_overlay.bzl  swift_overlay_helpers.bzl  swift_package_configuration.bzl  swift_proto_library.bzl  swift_symbol_graph_aspect.bzl  swift_synthesize_interface_aspect.bzl  swift_test.bzl
swift/internal/extensions/: BUILD.bazel  BUILD.bazel.tpl  androidsdk.BUILD  standalone_toolchain.bzl  swift_release_metadata.json  swift_releases.bzl  swift_sdk_releases.bzl  swift_sdks.bzl  toolchain.BUILD  toolchains.bzl  ubuntu22.04_aarch64_sysroot.lock.json  ubuntu22.04_sysroot.lock.json  wasmsdk.BUILD
system_sdks/: BUILD  README.md  swift_c_module.bzl
test/: BUILD  additional_linker_inputs_tests.bzl  android_tests.bzl  aspect_tests.bzl  ast_file_tests.bzl  bzl_test.bzl  cc_library_tests.bzl  compiler_arguments_tests.bzl  const_values_tests.bzl  coverage_settings_tests.bzl  custom_toolchain_linking_tests.bzl  debug_settings_tests.bzl  developer_framework_paths_tests.bzl  diagnostics_tests.bzl  environment_tests.bzl  explicit_modules_test.bzl  features_tests.bzl  foo.sh  generated_header_tests.bzl  imported_framework_tests.bzl  interop_hints_tests.bzl  layering_check_tests.bzl  linking_tests.bzl  local_defines_tests.bzl  localized_strings_tests.bzl  macro_with_doc.bzl  mainattr_tests.bzl  minimum_os_version_tests.bzl  mixed_language_tests.bzl  module_cache_settings_tests.bzl  module_interface_tests.bzl  module_mapping_tests.bzl  output_file_map_tests.bzl  parallel_compilation_tests.bzl  pch_output_dir_tests.bzl  precompiled_modules_tests.bzl  private_deps_as_public_tests.bzl  private_deps_tests.bzl  private_swiftinterface_tests.bzl  proto_tests.bzl  (+15 more)
toolchains/: BUILD
tools/: BUILD  update_swift_release_files.py
tools/explicit_modules/: BUILD.bazel  extensions.bzl  precomputed_xcode_explicit_module_repo.bzl  scan.py  scan_wrapper.sh  xcode_explicit_module_hub_repo.bzl  xcode_explicit_module_repo.bzl  xcode_locator_repo.bzl
(+564 files in other folders)
