###############################################################################
module(
    name = "rules_swift",
    version = "0",
    bazel_compatibility = [">=7.0.0"],
    compatibility_level = 3,
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(name = "apple_support", version = "2.5.3")

# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "com_github_nlohmann_json")

# foo = use_extension("//:extensions.bzl", "foo")
# use_repo(foo, "build_bazel_rules_swift_local_config")

swift_autoconfiguration = use_repo_rule(
    "//swift/internal:swift_autoconfiguration.bzl",
    "swift_autoconfiguration",
)

swift_autoconfiguration(name = "build_bazel_rules_swift_local_config")

# register_toolchains("@build_bazel_rules_swift_local_config//:all")

register_toolchains("//:all")

bazel_dep(name = "abseil-cpp", version = "20260107.1", repo_name = "com_google_absl")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1", repo_name = "com_googlesource_code_re2")
