"""rules_swift MODULE.bazel file"""

module(
    name = "rules_swift",
    version = "0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 3,
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "apple_support", version = "2.6.1")
bazel_dep(name = "bazel_features", version = "1.51.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "swift_argument_parser", version = "1.7.0")

swift_autoconfiguration = use_repo_rule("//swift/internal:swift_autoconfiguration.bzl", "swift_autoconfiguration")

swift_autoconfiguration(name = "rules_swift_local_config")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_apple_swift_protobuf",
    build_file = "//third_party:com_github_apple_swift_protobuf/BUILD.overlay",
    sha256 = "3fb50bd4d293337f202d917b6ada22f9548a0a0aed9d9a4d791e6fbd8a246ebb",
    strip_prefix = "swift-protobuf-1.20.2/",
    urls = ["https://github.com/apple/swift-protobuf/archive/1.20.2.tar.gz"],  # pinned to grpc-swift version
)

http_archive(
    name = "com_github_grpc_grpc_swift",
    build_file = "//third_party:com_github_grpc_grpc_swift/BUILD.overlay",
    sha256 = "58b60431d0064969f9679411264b82e40a217ae6bd34e17096d92cc4e47556a5",
    strip_prefix = "grpc-swift-1.16.0/",
    urls = ["https://github.com/grpc/grpc-swift/archive/1.16.0.tar.gz"],  # latest at time of writing
)

http_archive(
    name = "com_github_apple_swift_docc_symbolkit",
    build_file = "//third_party:com_github_apple_swift_docc_symbolkit/BUILD.overlay",
    sha256 = "de1d4b6940468ddb53b89df7aa1a81323b9712775b0e33e8254fa0f6f7469a97",
    strip_prefix = "swift-docc-symbolkit-swift-5.10-RELEASE",
    urls = ["https://github.com/apple/swift-docc-symbolkit/archive/refs/tags/swift-5.10-RELEASE.tar.gz"],
)

http_archive(
    name = "com_github_apple_swift_nio",
    build_file = "//third_party:com_github_apple_swift_nio/BUILD.overlay",
    sha256 = "9ec79852fd03d2e933ece3299ea6c8b8de6960625f7246fd65958409d1420215",
    strip_prefix = "swift-nio-2.51.0/",
    urls = ["https://github.com/apple/swift-nio/archive/2.51.0.tar.gz"],  # pinned to grpc swift version + version needed to fix linux build
)

http_archive(
    name = "com_github_apple_swift_nio_http2",
    build_file = "//third_party:com_github_apple_swift_nio_http2/BUILD.overlay",
    sha256 = "f0edfc9d6a7be1d587e5b403f2d04264bdfae59aac1d74f7d974a9022c6d2b25",
    strip_prefix = "swift-nio-http2-1.26.0/",
    urls = ["https://github.com/apple/swift-nio-http2/archive/1.26.0.tar.gz"],  # pinned to grpc-swift version
)

http_archive(
    name = "com_github_apple_swift_nio_transport_services",
    build_file = "//third_party:com_github_apple_swift_nio_transport_services/BUILD.overlay",
    sha256 = "f3498dafa633751a52b9b7f741f7ac30c42bcbeb3b9edca6d447e0da8e693262",
    strip_prefix = "swift-nio-transport-services-1.15.0/",
    urls = ["https://github.com/apple/swift-nio-transport-services/archive/1.15.0.tar.gz"],  # pinned to grpc-swift version
)

http_archive(
    name = "com_github_apple_swift_nio_extras",
    build_file = "//third_party:com_github_apple_swift_nio_extras/BUILD.overlay",
    sha256 = "4684b52951d9d9937bb3e8ccd6b5daedd777021ef2519ea2f18c4c922843b52b",
    strip_prefix = "swift-nio-extras-1.4.0/",
    urls = ["https://github.com/apple/swift-nio-extras/archive/1.4.0.tar.gz"],  # pinned to grpc-swift version
)

http_archive(
    name = "com_github_apple_swift_log",
    build_file = "//third_party:com_github_apple_swift_log/BUILD.overlay",
    sha256 = "5eaed6614cfaad882b8a0b5cb5d2177b533056b469ba431ad3f375193d370b70",
    strip_prefix = "swift-log-1.6.3/",
    urls = ["https://github.com/apple/swift-log/archive/1.6.3.tar.gz"],  # pinned to version with linux build fix: https://github.com/apple/swift-log/pull/354
)

http_archive(
    name = "com_github_apple_swift_nio_ssl",
    build_file = "//third_party:com_github_apple_swift_nio_ssl/BUILD.overlay",
    sha256 = "792882c884b2b89de0e9189557ea928bc019be2d9a89d63831876a746cbe9ce3",
    strip_prefix = "swift-nio-ssl-2.26.0/",
    urls = ["https://github.com/apple/swift-nio-ssl/archive/2.26.0.tar.gz"],  # pinned to version with linux build fix: https://github.com/apple/swift-nio-ssl/pull/448
)

http_archive(
    name = "com_github_apple_swift_collections",
    build_file = "//third_party:com_github_apple_swift_collections/BUILD.overlay",
    sha256 = "d9e4c8a91c60fb9c92a04caccbb10ded42f4cb47b26a212bc6b39cc390a4b096",
    strip_prefix = "swift-collections-1.0.4/",
    urls = ["https://github.com/apple/swift-collections/archive/1.0.4.tar.gz"],  # pinned to swift-nio @ grpc-swift version
)

http_archive(
    name = "com_github_apple_swift_atomics",
    build_file = "//third_party:com_github_apple_swift_atomics/BUILD.overlay",
    sha256 = "1bee7f469f7e8dc49f11cfa4da07182fbc79eab000ec2c17bfdce468c5d276fb",
    strip_prefix = "swift-atomics-1.1.0/",
    urls = ["https://github.com/apple/swift-atomics/archive/1.1.0.tar.gz"],  # pinned to swift-nio @ grpc-swift version
)

http_archive(
    name = "com_github_apple_swift_mmio",
    build_file = "//third_party:com_github_apple_swift_mmio/BUILD.overlay",
    patch_args = ["-p1"],
    patches = [
        "//third_party:com_github_apple_swift_mmio/0001-style-parser-remove-trailing-comma-in-OneOfParser-in.patch",
    ],
    sha256 = "51334b771beadc30767c90cd24e2acab9604d62ad0bc64a3c0665e3d6f19d82c",
    strip_prefix = "swift-mmio-0.1.1",
    urls = ["https://github.com/apple/swift-mmio/archive/refs/tags/0.1.1.tar.gz"],  # requires for the embedded toolchain example
)

# When using the "global index store" feature we rely on `index-import` to allow
# using a global index.
# TODO: we must depend on two versions of index-import to support backwards
# compatibility between Xcode 16.3+ and older versions, we can remove the older
# version once we drop support for Xcode 16.x.
http_archive(
    name = "rules_swift_index_import_5_8",
    build_file = "//third_party:rules_swift_index_import/BUILD.overlay",
    canonical_id = "index-import-5.8",
    sha256 = "28c1ffa39d99e74ed70623899b207b41f79214c498c603915aef55972a851a15",
    urls = ["https://github.com/MobileNativeFoundation/index-import/releases/download/5.8.0.1/index-import.tar.gz"],
)

http_archive(
    name = "rules_swift_index_import_6_1",
    build_file = "//third_party:rules_swift_index_import/BUILD.overlay",
    canonical_id = "index-import-6.1",
    sha256 = "9a54fc1674af6031125a9884480a1e31e1bcf48b8f558b3e8bcc6b6fcd6e8b61",
    urls = ["https://github.com/MobileNativeFoundation/index-import/releases/download/6.1.0.1/index-import.tar.gz"],
)

system_sdk = use_extension("//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(
    # NOTE: This doesn't apply to downstream repos
    exclude_modules = {
        "AppleTVOS": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "AppleTVSimulator": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "iPhoneSimulator": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",
        ],
        "iPhoneOS": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XROS": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XRSimulator": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchOS": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchSimulator": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
    },
    include_all = True,
)
use_repo(system_sdk, "system_sdk")

swift = use_extension("//swift:extensions.bzl", "swift", dev_dependency = True)
swift.toolchain(
    name = "swift_toolchain",
    swift_version = "6.3.2",
)
use_repo(
    swift,
    "swift_toolchain",
    "swift_toolchain_ubuntu22.04",
    "swift_toolchain_ubuntu22.04-aarch64",
    "swift_toolchain_xcode",
)

register_toolchains(
    # We're using ubuntu22.04 here because that's what's used in the current rules_swift buildkite CI.
    # In a perfect world, we would be able to have bazel automatically use the toolchain that just works.
    # Unfortunately, we are not in this world yet. This would require either one of these two things to happen:
    # * either have a constraint to select on the current distribution, which would allow us to register all
    #   the toolchains and have bazel automatically select the right one. But there is no such constraint today.
    # * or have a swift universal Linux toolchain. Which is not the case today.
    # Anyway, for now we will need to update this every time we update the CI environment. Contributors might also
    # have to update this list if they're testing on a different Linux distribution.
    "@swift_toolchain//:cc_toolchain_embedded_ubuntu22.04",
    "@swift_toolchain//:cc_toolchain_exec_ubuntu22.04",
    "@swift_toolchain//:cc_toolchain_embedded_ubuntu22.04-aarch64",
    "@swift_toolchain//:cc_toolchain_embedded_xcode",
    "@swift_toolchain//:swift_toolchain_embedded_ubuntu22.04",
    "@swift_toolchain//:swift_toolchain_exec_ubuntu22.04",
    "@swift_toolchain//:swift_toolchain_embedded_ubuntu22.04-aarch64",
    "@swift_toolchain//:swift_toolchain_embedded_xcode",
    dev_dependency = True,
)

register_toolchains("//swift/toolchains:all")

include("//examples/cross_compilation/android_app:android.MODULE.bazel")
include("//examples/cross_compilation/wasm:wasm.MODULE.bazel")

# Dev dependencies
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.46.0", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.59.0", dev_dependency = True)  # TODO: Remove when transitives update past this version
bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)
bazel_dep(name = "swift-syntax", version = "602.0.0.bcr.2", dev_dependency = True)
bazel_dep(name = "rules_swift_layering_check_external_test", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_swift_layering_check_external_test",
    path = "third_party/rules_swift_layering_check_external_test",
)

# TODO: In stardoc 0.7.1+, the `load` statements added to the docs are relative to the `alias` targets which is incorrect.
# To keep the docs without confusing load statements we patch a partial revert of: https://github.com/bazelbuild/stardoc/pull/216
# https://github.com/bazelbuild/stardoc/issues/297
single_version_override(
    module_name = "stardoc",
    patch_strip = 1,
    patches = ["//third_party/patches:stardoc-revert-load-statements-in-docs.patch"],
)

# FIXME: Delete after testing

archive_override(
    module_name = "apple_support",
    integrity = "sha256-0P41hmvfBnWQwTKNteNnat6byDHlan9B8AdJaprp/Ek=",
    strip_prefix = "apple_support-17c7248ee2f4f21b2d1f3668d88e4f40d9453220",
    urls = [
        "https://github.com/bazelbuild/apple_support/archive/17c7248ee2f4f21b2d1f3668d88e4f40d9453220.tar.gz",
    ],
)
