# A runnable Android app that runs Swift code through the JNI.
#
#   bazel build //examples/cross_compilation/android_app:app
#   adb install -r bazel-bin/examples/cross_compilation/android_app/app.apk
#   adb shell am start -n com.example.swiftjni/.MainActivity
#
# The call chain: MainActivity.kt -> NativeBridge.greetingFromSwift() (Kotlin,
# JNI) -> libSwiftJNI.so (swift_binary, @_cdecl) -> Greeter (swift_library).

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_android//rules:rules.bzl", "android_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("//swift:swift.bzl", "swift_binary", "swift_library")
load("//swift/toolchains:android_runtime_lib.bzl", "select_android_runtime_lib")

package(default_visibility = ["//visibility:public"])

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [
        ":app_lib",
        ":libcxx",
        ":swift_jni",
    ],
)

kt_android_library(
    name = "app_lib",
    srcs = [
        "java/com/example/swiftjni/MainActivity.kt",
        "java/com/example/swiftjni/NativeBridge.kt",
    ],
    custom_package = "com.example.swiftjni",
    manifest = "AndroidManifest.xml",
)

build_test(
    name = "app_build_test",
    targets = [":app"],
)

# The Swift JNI library and the NDK C++ runtime it loads, packaged into the APK
# by android_binary's per-ABI native split. A prebuilt .so in a cc_library's
# srcs becomes the CcInfo dynamic library the split collects. These only build
# for Android (the split configures them from --android_platforms), so the
# //examples/... wildcard skips them on a non-Android host.
cc_library(
    name = "swift_jni",
    srcs = [":SwiftJNI"],
    target_compatible_with = ["@platforms//os:android"],
)

cc_library(
    name = "libcxx",
    srcs = [":libcxx_shared"],
    target_compatible_with = ["@platforms//os:android"],
)

select_android_runtime_lib(
    name = "libcxx_shared",
    target_compatible_with = ["@platforms//os:android"],
    triple = "aarch64-linux-android",
)

# `linkshared` produces `libSwiftJNI.so`. The JNI entry point is written in
# Swift (it `import`s the SDK's `Android` module for the JNI types) and calls
# into the `Greeter` library.
swift_binary(
    name = "SwiftJNI",
    srcs = ["Sources/SwiftJNI/SwiftJNI.swift"],
    linkshared = True,
    target_compatible_with = ["@platforms//os:android"],
    deps = [":Greeter"],
)

# A plain library dependency, compiled for whichever platform depends on it.
swift_library(
    name = "Greeter",
    srcs = ["Sources/Greeter/Greeter.swift"],
    module_name = "Greeter",
)
